--- a/WideWorldImporters.Wpf/WideWorldImporters.Wpf/MainWindow.xaml
+++ b/WideWorldImporters.Wpf/WideWorldImporters.Wpf/MainWindow.xaml
@@ -35,17 +35,14 @@
                 Margin="8 0" />
         </StackPanel>
 
-
         <ProgressBar
             Grid.Row="1"
                     Margin="0,0,0,0"
                     Height="10"
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Top"
-            Minimum="0"
-            Maximum="100"
-                    IsIndeterminate="{Binding IsLoading, Converter={StaticResource BoolToVisibilityConverter}}"
-                    />
+                    IsIndeterminate="True"
+                    Visibility="{Binding IsLoading, Converter={StaticResource BoolToVisibilityConverter}}"/>
 
         <Grid x:Name="DataGridContainer"
               Grid.Row="2" 
@@ -56,12 +53,13 @@
                       FontSize="16"
                       CanUserReorderColumns="False"
                       CanUserResizeColumns="True"
-                      CanUserSortColumns="True"
+                      CanUserSortColumns="{Binding IsModified, Converter={StaticResource BoolToVisibilityConverter}}"
                       AutoGenerateColumns="False"
                       ItemsSource="{Binding Customers}"
                       SelectedItem="{Binding SelectedCustomer, Mode=TwoWay}"
                       SelectionMode="Single"
-                      Sorted="DataGrid_Sorted"
+                      
+                Sorting="DataGrid_Sorting"
                       CellEditEnding="DataGrid_CellEditEnding">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridCell}">
