--- a/WideWorldImporters.Wpf/WideWorldImporters.Wpf/MainWindow.xaml
+++ b/WideWorldImporters.Wpf/WideWorldImporters.Wpf/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WideWorldImporters.Wpf"
-        xmlns:utils="clr-namespace:WideWorldImporters.Wpf.Extensions" xmlns:controls="clr-namespace:WideWorldImporters.Wpf.Controls"
+        xmlns:utils="clr-namespace:WideWorldImporters.Wpf.Extensions"
         mc:Ignorable="d"
         Title="OData DataGrid Example" Height="450" Width="800">
     <!-- DataGrid -->
@@ -48,7 +48,7 @@
               Grid.Row="2" 
               Margin="0,10,0,0">
 
-            <controls:CustomDataGrid 
+            <DataGrid 
                 x:Name="DataGrid"
                       FontSize="16"
                       CanUserReorderColumns="True"
@@ -146,7 +146,7 @@
                         </Grid>
                     </ControlTemplate>
                 </DataGrid.RowValidationErrorTemplate>
-            </controls:CustomDataGrid>
+            </DataGrid>
         </Grid>
 
         <!-- Pagination -->
